
* Very minor performance improvement in Lucene search.

* Less ugly error handling when user enters a blank or invalid search
string.

* Fixed bug 2165900 - "Error sending email notifiations" due to null
characters in the message body.  How does that happen?

* Added an animation effect.  It highlights a newly added comment, 
attachment, or email post.

-----------------------------------------------------------------------
Version 2.9.6   10/12/2008 
-----------------------------------------------------------------------

* Fixed missing second-from-last-line in Web.config: 
</btnetSettings>

* In search_text.aspx, the new full text search, nvarchar(MAX) doesn't 
work on SQL Server 2000. Changed to nvarchar(3000).

* Minor security improvements related to fckEditor

-----------------------------------------------------------------------
Version 2.9.5   10/12/2008 
-----------------------------------------------------------------------

* New feature: Full text search! Available at the top of every page.
The search uses the Lucene.Net search engine.  This feature is enabled
by default.  It uses the App_Data\lucene_index folder for its index.
The folder gets created automatically.  

This full text search *DOES* obey project and org permissions, so it's
safe to use even if you are using permissions.

The text that is searchable includes the description, tags, comments, 
and both incoming and outgoing emails.  Text that is not searchable,
at least for now, includes comments marked hidden from external users
and text in custom text fields.

(Note, the version of Lucene.Net included with this release has a 
slightly changed FSDirectory class.  I've included the source code 
of the file I changed.)

* Now using App_Data by default for new installations for logs, uploads, 
and the new Lucene index. You can still override the locations via 
Web.config.

(The uploads folder isn't used if you are using file-based attachments 