@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.6 Oct 12, 2008
+Version 2.9.7 Oct XX, 2008
 
 
 <p>
