@@ -73,6 +73,8 @@ characters in the message body.  How does that happen?
 * Added an animation effect.  It highlights a newly added comment, 
 attachment, or email post.
 
+* Changed adding attachment page to give a little bit better feedback.
+
 -----------------------------------------------------------------------
 Version 2.9.6   10/12/2008 
 -----------------------------------------------------------------------
